test/e2e/manifests/assisted-image-service/assisted-image-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: assisted-service
  name: assisted-image-service
  namespace: assisted-installer
spec:
  ports:
  - name: assisted-image-service
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: assisted-image-service-http
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: assisted-image-service
